fix(ci): fix terraform pipeline

--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Create terraform.tfvars
         run: |
-          cp github-actions.tfvars terraform.tfvars
+          cp github-actions.tfvars.template terraform.tfvars
           
       - name: Terraform Validate
         run: terraform validate
