--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Create terraform.tfvars
         run: |
-          cp github-actions.tfvars.template terraform.tfvars
+          envsubst '$TF_VAR_GITHUB_PAT' < github-actions.tfvars.template > terraform.tfvars
           
       - name: Terraform Validate
         run: terraform validate
