--- a/github-actions.tfvars.template
+++ b/github-actions.tfvars.template
@@ -1,12 +1,16 @@
   cluster = {
     name         = "cicd-cluster"
-    network_dhcp = true
+    #network_dhcp = true
+    gateway  = "192.168.10.1"
+    cidr     = 24
+    endpoint = "192.168.10.210"
   }
 
   vms = {
     "cp-0" = {
       host_node      = "pve1"
       machine_type   = "controlplane"
+      ip             = "192.168.10.210"
       cpu            = 4
       ram_dedicated  = 8192
       os_disk_size   = 10
