feat: enable cilium hubble for observability

--- a/modules/talos_k8s/kubernetes/cilium-values.yaml
+++ b/modules/talos_k8s/kubernetes/cilium-values.yaml
@@ -23,3 +23,8 @@ data:
       enabled: true
     externalIPs:
       enabled: true
+    hubble:
+      relay:
+        enabled: true
+      ui:
+        enabled: true
